--- a/about-us.html
+++ b/about-us.html
@@ -274,8 +274,8 @@
                                 </p>
                                 <p class="over-hidden mt-10">
                                     <strong>E</strong> : <a class="link-hover" href="#"
-                                                            data-hover-text="shipchandlerinthailand@gmail.com
-                                                            ">shipchandlerinthailand@gmail.com
+                                                            data-hover-text="sales@shipchandlerthailand.com
+                                                            ">sales@shipchandlerthailand.com
                                                         </a>
                                 </p>
                             </div>
