--- a/contact.html
+++ b/contact.html
@@ -195,7 +195,7 @@
                                     <div class="dsn-icon"><i class="fas fa-envelope" aria-hidden="true"></i></div>
                                     <div class="service-content p-relative"><h4 class="service_title  sm-title-block ">
                                         Write Us:</h4>
-                                        <div class="service_description mt-10 max-w570 dsn-auto"><p>shipchandlerinthailand@gmail.com</p>
+                                        <div class="service_description mt-10 max-w570 dsn-auto"><p>sales@shipchandlerthailand.com</p>
                                         </div>
                                     </div>
                                 </div>
@@ -279,8 +279,8 @@
                                 </p>
                                 <p class="over-hidden mt-10">
                                     <strong>E</strong> : <a class="link-hover" href="#"
-                                                            data-hover-text="shipchandlerinthailand@gmail.com
-                                                            ">shipchandlerinthailand@gmail.com
+                                                            data-hover-text="sales@shipchandlerthailand.com
+                                                            ">sales@shipchandlerthailand.com
                                                         </a>
                                 </p>
                             </div>
